checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000141296.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#52: 
> >> drivers/net/ibm_newemac/core.c:2831: error: ???struct net_device??? has no

WARNING:TYPO_SPELLING: 'isnt' may be misspelled - perhaps 'isn't'?
#80: 
> > This is because CONFIG_COMPAT_NET_DEV_OPS isnt set and needs to be for  
                                              ^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:HOTPLUG_SECTION: Using __devinit is unnecessary
#135: FILE: drivers/net/ibm_newemac/core.c:2715:
 static int __devinit emac_probe(struct of_device *ofdev,

CHECK:BRACES: Unbalanced braces around else statement
#160: FILE: drivers/net/ibm_newemac/core.c:2862:
+	} else

The placement of braces is stylistically incorrect.
The preferred way is to put the opening brace last on the line,
and put the closing brace first::

  if (x is true) {
          we do y
  }

This applies for all non-functional blocks.
However, there is one special case, namely functions: they have the
opening brace at the beginning of the next line, thus::

  int function(int x)
  {
          body of function
  }

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#placing-braces-and-spaces

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000141296.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 3 warnings, 1 checks, 58 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000141296.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
